# openapi/index.yaml
@@ -1172,6 +1172,8 @@ definitions:
             $ref: '#/definitions/LegalData'
           eu_covid_cert:
             $ref: '#/definitions/EUCovidCert'
+          third_party_data:
+            $ref: '#/definitions/ThirdPartyData'
           due_date:
             $ref: '#/definitions/Timestamp'
   NewMessageContent:
@@ -1187,6 +1189,8 @@ definitions:
             $ref: '#/definitions/PrescriptionData'
           eu_covid_cert:
             $ref: '#/definitions/EUCovidCert'
+          third_party_data:
+            $ref: '#/definitions/ThirdPartyData'
           legal_data:
             $ref: '#/definitions/LegalData'
   NewMessage:
@@ -1489,6 +1493,32 @@ definitions:
         properties:
           payee:
             $ref: '#/definitions/Payee'
+  ThirdPartyData:
+    type: object
+    description: >-
+      Payload containing all information needed to retrieve and visualize third
+      party message details
+    properties:
+      id:
+        type: string
+        description: >-
+          Unique id for retrieving third party enriched information about the
+          message
+        minLength: 1
+      original_sender:
+        type: string
+        description: Either a ServiceId or a simple string representing the sender name
+        minLength: 1
+      original_receipt_date:
+        $ref: '#/definitions/Timestamp'
+      has_attachments:
+        type: boolean
+        default: false
+      summary:
+        type: string
+        minLength: 1
+    required:
+      - id
   Payee:
     type: object
     description: Metadata needed to explicit payment's payee.
